--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Layout</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        div {
+            border: 1px white solid;
+            /* margin: 5px; */
+            padding: 5px;
+        }
+    </style>
 </head>
 
-<body>
-    <div class="header">Header</div>
-    <div class="aside">Side Panel</div>
-    <div class="main">
-        <div class="section">Content Section 1</div>
-        <div class="section">Content Section 2</div>
-        <div class="section">Content Section 3</div>
+<body class="bg-dark text-light">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-lg-2 col-md-6 col-sm-12 col-3">
+                Column 1
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-4 col-3">
+                Column 2
+            </div>
+            <div class="col-lg-4 col-md-12  col-sm-8 col-6">
+                Column 3
+            </div>
+        </div>
     </div>
-    <div class="footer">Footer</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
